--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,17 @@
 	"name": "hsk99/webman-task",
 	"type": "library",
 	"license": "MIT",
+	"homepage": "http://hsk99.com.cn",
+	"authors": [
+		{
+			"name": "hsk99",
+			"email": "3024186605@qq.com",
+			"homepage": "http://hsk99.com.cn"
+		}
+	],
 	"require": {
-		"workerman/webman-framework": "^1.2.1"
+		"workerman/webman-framework": "^1.2.1",
+		"workerman/crontab": "^1.0"
 	},
 	"autoload": {
 		"psr-4": {
